[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "gtop-top"
version = "0.3.0"
description = "A lightweight CLI tool to monitor GPU status."
readme = "README.md"
authors = [{ name = "Hossein Ghorbanfekr", email = "hgh.comphys@gmail.com" }]
license = {text = "MIT"}
keywords = ["GPU", "HPC"]
dependencies = [
	'nvidia-ml-py>=11.450.129',
	'plotext>=5.2.8',
	'psutil>=5.9.8',
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "mypy", "black", "isort"]

[project.urls]
Homepage = "https://github.com/hghcomphys/gpu-top" 

[project.scripts]
gtop = "gtop.cli:main"
